# TeaChatbot

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
application/: dto.py
application/dto/: course.py  course_content.py  knowledge.py  user_feedback.py  user_question.py
application/use_cases/: ask_question.py  create_user_temp.py  generate_chapter_content.py  generate_course.py  generate_questions.py  insert_knowledge.py  prompt_engineer.py  prompt_loader.py  send_api_request.py
domain/models/: knowledge.py
domain/services/: api_request_service.py  gemini_service.py  temporary_file_service.py
infrastructure/: config.py
infrastructure/db/: postgresql_db.py  vector_db.py
interfaces/api/: fastapi_app.py
template/prompt/: chapter_content_template.txt  course_prompt_template.txt  exploratory_question.txt
