[project]
name = "teachatbot"
version = "0.1.0"
description = "Bot used in IEP project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.40.59",
    "dotenv>=0.9.9",
    "fastapi>=0.117.1",
    "google>=3.0.0",
    "google-genai>=1.38.0",
    "google-generativeai>=0.8.5",
    "sentence-transformers>=5.1.0",
    "supabase>=2.22.2",
    "uvicorn>=0.37.0",
    "vecs>=0.4.5",
    "langchain>=0.3.27",
]
